--- a/ProyectoHotel/Views/Mantenimiento/Categoria.cshtml
+++ b/ProyectoHotel/Views/Mantenimiento/Categoria.cshtml
@@ -23,14 +23,14 @@
                     <table class="table table-bordered" id="tabla" style="width:100%" cellspacing="0">
                         <thead>
                             <tr>
-                                <th>Descricion</th>
+                                <th>Descripcion</th>
                                 <th>Estado</th>
                                 <th></th>
                             </tr>
                         </thead>
                         <tfoot>
                             <tr>
-                                <th>Descricion</th>
+                                <th>Descripcion</th>
                                 <th>Estado</th>
                                 <th></th>
                             </tr>
@@ -50,7 +50,7 @@
 <div class="modal fade" id="FormModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header bg-primary text-white">
+            <div class="modal-header bg-success text-white">
                 <h5 class="modal-title" id="exampleModalLabel">Categoria</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -58,28 +58,48 @@
             </div>
             <div class="modal-body">
                 <input id="txtid" type="hidden" value="0" />
-                <form id="formNivel">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <label for="txtdescripcion">Descripcion:</label>
-                                <input type="text" class="form-control required" id="txtdescripcion" name="descripcion" autocomplete="off">
-                            </div>
+                @*<form id="formNivel">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="form-group">
+                        <label for="txtdescripcion">Descripcion:</label>
+                        <input type="text" class="form-control required" id="txtdescripcion" name="descripcion" autocomplete="off">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="form-group">
+                        <label for="cboEstado">Estado:</label>
+                        <select id="cboEstado" class="form-control">
+                            <option value="1">Activo</option>
+                            <option value="0">No Activo</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+
+        </form>*@
+
+                <form id="form">
+                    <input id="txtid" class="model" value="0" type="hidden" />
+                    <div class="form-group row">
+                        <label for="txtnombre" class="col-sm-2 col-form-label col-form-label-sm">Descripcion</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control form-control-sm model" maxlength="100" id="txtdescripcion" name="descripcion" autocomplete="off">
+                        </div>
+                        <span class="error"></span>
+                    </div>
+                    <div class="form-group row">
+                        <label for="cboEstado" class="col-sm-2 col-form-label col-form-label-sm">Estado</label>
+                        <div class="col-sm-10">
+                            <select class="form-control form-control-sm model" id="cboEstado" name="activo">
+                                <option value="1">Activo</option>
+                                <option value="0">No Activo</option>
+                            </select>
                         </div>
                     </div>
-
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <label for="cboEstado">Estado:</label>
-                                <select id="cboEstado" class="form-control">
-                                    <option value="1">Activo</option>
-                                    <option value="0">No Activo</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-
                 </form>
 
             </div>
@@ -196,7 +216,7 @@
             var request = {
                 objeto: {
                     IdCategoria: $("#txtid").val(),
-                    Descripcion: $("#txtdescripcion").val(),
+                    Descripcion: $("#txtdescripcion").val().toLowerCase(),
                     Estado: parseInt($("#cboEstado").val()) == 1 ? true : false
                 }
             }
