--- a/ProyectoHotel/Views/Mantenimiento/Habitaciones.cshtml
+++ b/ProyectoHotel/Views/Mantenimiento/Habitaciones.cshtml
@@ -13,10 +13,10 @@
     </div>
     <div class="card-body">
         @*<div class="row">
-            <div class="col-sm-12">
+                <div class="col-sm-12">
+                </div>
             </div>
-        </div>
-        <hr />*@
+            <hr />*@
         <div class="row">
             <div class="col-sm-12">
                 <div class="table-responsive">
@@ -58,7 +58,7 @@
 <div class="modal fade" id="FormModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header bg-primary text-white">
+            <div class="modal-header bg-success text-white">
                 <h5 class="modal-title" id="exampleModalLabel">Habitacion</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -66,60 +66,105 @@
             </div>
             <div class="modal-body">
                 <input id="txtid" type="hidden" value="0" />
-                <form id="formNivel">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <label for="txtnumero">Numero:</label>
-                                <input type="text" class="form-control required" id="txtnumero" name="descripcion" autocomplete="off">
+                @*<form id="formNivel">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="txtnumero">Numero:</label>
+                                    <input type="text" class="form-control required" id="txtnumero" name="descripcion" autocomplete="off">
+                                </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="txtdetalle">Detalle:</label>
+                                    <input type="text" class="form-control required" id="txtdetalle" name="descripcion" autocomplete="off">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="txtprecio">Precio:</label>
+                                    <input type="text" class="form-control required" id="txtprecio" name="descripcion" autocomplete="off">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="cbocategoria">Categoria:</label>
+                                    <select class="form-control" id="cbocategoria"></select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="cbopiso">Piso:</label>
+                                    <select class="form-control" id="cbopiso"></select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="cboEstado">Estado:</label>
+                                    <select id="cboEstado" class="form-control">
+                                        <option value="1">Activo</option>
+                                        <option value="0">No Activo</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+
+                    </form>*@
+
+                <form id="form">
+                    <input id="txtid" class="model" value="0" type="hidden" />
+                    <div class="form-group row">
+                        <label for="txtnombre" class="col-sm-2 col-form-label col-form-label-sm">Numero</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control form-control-sm model" maxlength="100" id="txtnumero" name="numero" autocomplete="off">
+                        </div>
+                        <span class="error"></span>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <label for="txtdetalle">Detalle:</label>
-                                <input type="text" class="form-control required" id="txtdetalle" name="descripcion" autocomplete="off">
-                            </div>
+                    <div class="form-group row">
+                        <label for="txtdetalle" class="col-sm-2 col-form-label col-form-label-sm">Detalle</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control form-control-sm model" maxlength="100" id="txtdetalle" name="detalle" autocomplete="off">
                         </div>
+                        <span class="error"></span>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <label for="txtprecio">Precio:</label>
-                                <input type="text" class="form-control required" id="txtprecio" name="descripcion" autocomplete="off">
-                            </div>
+                    <div class="form-group row">
+                        <label for="txtprecio" class="col-sm-2 col-form-label col-form-label-sm">Precio (S/.)</label>
+                        <div class="col-sm-10">
+                            @*<div class="input-group-text col-sm-10">*@
+                            @*<span class="input-group-text">S/.</span>*@
+                            @*<p>S/. &nbsp;</p>*@
+                            <input type="text" class="form-control form-control-sm model" maxlength="4" id="txtprecio" name="precio" autocomplete="off">
                         </div>
+                        <span class="error"></span>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <label for="cbocategoria">Categoria:</label>
-                                <select class="form-control" id="cbocategoria"></select>
-                            </div>
+                    <div class="form-group row">
+                        <label for="txtcantidad" class="col-sm-2 col-form-label col-form-label-sm">Cantidad</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control form-control-sm model" maxlength="2" id="txtcantidad" name="cantidad" autocomplete="off">
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <label for="cbopiso">Piso:</label>
-                                <select class="form-control" id="cbopiso"></select>
-                            </div>
-                        </div>
+                        <span class="error"></span>
                     </div>
 
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                                <label for="cboEstado">Estado:</label>
-                                <select id="cboEstado" class="form-control">
-                                    <option value="1">Activo</option>
-                                    <option value="0">No Activo</option>
-                                </select>
-                            </div>
+                    <div class="form-group row">
+                        <label for="cboEstado" class="col-sm-2 col-form-label col-form-label-sm">Estado</label>
+                        <div class="col-sm-10">
+                            <select class="form-control form-control-sm model" id="cboEstado" name="activo">
+                                <option value="1">Activo</option>
+                                <option value="0">No Activo</option>
+                            </select>
                         </div>
                     </div>
-
                 </form>
 
             </div>
@@ -287,7 +332,7 @@
                 objeto: {
                     IdHabitacion: $("#txtid").val(),
                     Numero: $("#txtnumero").val(),
-                    Detalle: $("#txtdetalle").val(),
+                    Detalle: $("#txtdetalle").val().toLowerCase(),
                     PrecioTexto: $("#txtprecio").val(),
                     oCategoria: { IdCategoria: $("#cbocategoria option:selected").val()} ,
                     oPiso: { IdPiso: $("#cbopiso option:selected").val() },
