--- a/ProyectoHotel/Views/Tienda/Producto.cshtml
+++ b/ProyectoHotel/Views/Tienda/Producto.cshtml
@@ -13,10 +13,10 @@
     </div>
     <div class="card-body">
         @*<div class="row">
-            <div class="col-sm-12">
+                <div class="col-sm-12">
+                </div>
             </div>
-        </div>
-        <hr />*@
+            <hr />*@
         <div class="row">
             <div class="col-sm-12">
                 <div class="table-responsive">
@@ -56,7 +56,7 @@
 <div class="modal fade" id="FormModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header bg-primary text-white">
+            <div class="modal-header bg-success text-white">
                 <h5 class="modal-title" id="exampleModalLabel">Producto</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -64,12 +64,12 @@
             </div>
             <div class="modal-body">
                 <input id="txtid" type="hidden" value="0" />
-                <form id="formNivel">
+                @*<form id="formNivel">
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="form-group">
                                 <label for="txtnombre">Nombre:</label>
-                                <input type="text" class="form-control required" id="txtnombre" name="descripcion" autocomplete="off">
+                                <input type="text" class="form-control required" id="txtnombre" name="descripcion" autocomplete="off" required="required">
                             </div>
                         </div>
                     </div>
@@ -110,8 +110,49 @@
                         </div>
                     </div>
 
-                </form>
+                </form>*@
 
+                <form id="form">
+                    <input id="txtid" class="model" value="0" type="hidden" />
+                    <div class="form-group row">
+                        <label for="txtnombre" class="col-sm-2 col-form-label col-form-label-sm">Nombre</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control form-control-sm model" maxlength="100" id="txtnombre" name="nombre" autocomplete="off">
+                        </div>
+                        <span class="error"></span>
+                    </div>
+                    <div class="form-group row">
+                        <label for="txtdetalle" class="col-sm-2 col-form-label col-form-label-sm">Detalle</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control form-control-sm model" maxlength="100" id="txtdetalle" name="detalle" autocomplete="off">
+                        </div>
+                        <span class="error"></span>
+                    </div>
+                    <div class="form-group row">
+                        <label for="txtprecio" class="col-sm-2 col-form-label col-form-label-sm">Precio (S/.)</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control form-control-sm model" maxlength="4" id="txtprecio" name="precio" autocomplete="off">
+                        </div>
+                        <span class="error"></span>
+                    </div>
+                    <div class="form-group row">
+                        <label for="txtcantidad" class="col-sm-2 col-form-label col-form-label-sm">Cantidad</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control form-control-sm model" maxlength="2" id="txtcantidad" name="cantidad" autocomplete="off">
+                        </div>
+                        <span class="error"></span>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="cboEstado" class="col-sm-2 col-form-label col-form-label-sm">Estado</label>
+                        <div class="col-sm-10">
+                            <select class="form-control form-control-sm model" id="cboEstado" name="activo">
+                                <option value="1">Activo</option>
+                                <option value="0">No Activo</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
@@ -121,7 +162,7 @@
     </div>
 </div>
 
-
+@Scripts.Render("~/bundles/bootstrap")
 
 @section scripts{
 
@@ -218,6 +259,7 @@
 
                     if (data.resultado) {
                         tabladata.ajax.reload();
+
                     } else {
                         alert("No se pudo eliminar")
                     }
@@ -235,8 +277,8 @@
             var request = {
                 objeto: {
                     IdProducto: $("#txtid").val(),
-                    Nombre: $("#txtnombre").val(),
-                    Detalle: $("#txtdetalle").val(),
+                    Nombre: $("#txtnombre").val().toLowerCase(),
+                    Detalle: $("#txtdetalle").val().toLowerCase(),
                     PrecioTexto: $("#txtprecio").val(),
                     Cantidad: $("#txtcantidad").val(),
                     Estado: parseInt($("#cboEstado").val()) == 1 ? true : false
@@ -257,7 +299,7 @@
                         swal("Exito!", "Registro guardado exitosamente!", "success");
                     } else {
                         /*alert("No se pudo guardar los cambios")*/
-                        swal("Error!", "No se pudo guardar, verifique los campos faltantes!", "warning");
+                        swal("Error!", "No se pudo guardar, verifique los campos en blanco o si el campo que desea ingresar es repetido!", "warning");
                     }
                 },
                 error: function (error) {
