--- a/ProyectoHotel/Views/Gestion/SalidaRegistro.cshtml
+++ b/ProyectoHotel/Views/Gestion/SalidaRegistro.cshtml
@@ -79,20 +79,24 @@
         <div class="form-row">
             <div class="col-md-3">
                 <label class="form-text font-weight-bold">Costo Habitacion:</label>
-                <input type="number" class="form-control form-control-sm" id="validationCustom01" value="@Html.DisplayTextFor(model => model.PrecioInicial)" disabled="disabled">
+                <div style="position:absolute; left:15px; top:39px">S/. </div>
+                <input type="number" class="form-control form-control-sm" style='padding-left:35px;' id="validationCustom01" value="@Html.DisplayTextFor(model => model.PrecioInicial)" disabled="disabled">
 
             </div>
             <div class="col-md-3">
                 <label class="form-text font-weight-bold">Cantidad Adelantado:</label>
-                <input type="number" class="form-control form-control-sm" id="validationCustom01" value="@Html.DisplayTextFor(model => model.Adelanto)" disabled="disabled">
+                <div style="position:absolute; left:15px; top:39px">S/. </div>
+                <input type="number" class="form-control form-control-sm" style='padding-left:35px;' id="validationCustom01" value="@Html.DisplayTextFor(model => model.Adelanto)" disabled="disabled">
             </div>
             <div class="col-md-3">
                 <label class="form-text font-weight-bold">Cantidad Restante:</label>
-                <input type="number" class="form-control form-control-sm" id="validationCustom01" value="@Html.DisplayTextFor(model => model.PrecioRestante)" disabled="disabled">
+                <div style="position:absolute; left:15px; top:39px">S/. </div>
+                <input type="number" class="form-control form-control-sm" style='padding-left:35px;' id="validationCustom01" value="@Html.DisplayTextFor(model => model.PrecioRestante)" disabled="disabled">
             </div>
             <div class="col-md-3">
                 <label class="form-text font-weight-bold">Costo por Penalidad:</label>
-                <input type="number" class="form-control form-control-sm" id="txtcostopenalidad" value="0">
+                <div style="position:absolute; left:15px; top:39px">S/. </div>
+                <input type="number" class="form-control form-control-sm" placeholder="0" style='padding-left:35px;' id="txtcostopenalidad" value="">
             </div>
         </div>
     </div>
@@ -173,7 +177,7 @@
             <div class="col-4">
                 <div class="content2 input-group">
                     <div class="input-group-prepend">
-                        <label class="input-group-text" for="inputGroupSelect01">Total a Pagar S/.</label>
+                        <label class="input-group-text bg-dark" style="color: white" for="inputGroupSelect01">Total a Pagar (S/)</label>
                     </div>
                     <input type="text" class="form-control bg-white" id="txttotalpagar" disabled="disabled" value="@TotalPagar">
                 </div>
@@ -303,6 +307,22 @@
             doc.text("Gracias por su visita", 10, 55);
             doc.save("BoletadeVenta_'@Html.DisplayTextFor(model => model.oCliente.Documento)'.pdf");
         }
+
+        //coma decimal en precios
+        $("#txtcostopenalidad" && "#txttotalpagar").on({
+            "focus": function (event) {
+                $(event.target).select();
+            },
+            "keyup": function (event) {
+                $(event.target).val(function (index, value) {
+                    return value.replace(/\D/g, "")
+                        .replace(/([0-9])([0-9]{2})$/, '$1.$2')
+                        .replace(/\B(?=(\d{3})+(?!\d)\.?)/g, ",");
+                });
+            }
+        });
+
+
     </script>
 
 }
