--- a/ProyectoHotel/Views/Gestion/Venta.cshtml
+++ b/ProyectoHotel/Views/Gestion/Venta.cshtml
@@ -60,8 +60,9 @@
                 <select id="cboproducto" class="form-control"></select>
             </div>
             <div class="col-md-2">
+                <div style="position:absolute; left:15px; top:39px">S/. </div>
                 <label for="validationCustom01">Precio:</label>
-                <input type="text" class="form-control" id="txtprecio" disabled="disabled">
+                <input type="text" class="form-control" style='padding-left:35px;' id="txtprecio" disabled="disabled">
             </div>
             <div class="col-md-2">
                 <label for="validationCustom01">Cantidad</label>
@@ -256,6 +257,7 @@
 
         })
 
+        //coma decimal en precios
         $("#txtprecio").on({
             "focus": function (event) {
                 $(event.target).select();
