Update minor changes on login image and conection database

--- a/ProyectoHotel/Views/Login/Index.cshtml
+++ b/ProyectoHotel/Views/Login/Index.cshtml
@@ -33,7 +33,8 @@
                 <div class="app-auth-body mx-auto">
                     <br /><br /><br /><br /><br /><br /><br /><br />
                     <div class="app-auth-branding mb-4"><a class="app-logo" href="#"><img class="logo-icon me-2" src="~/imagenes/app-logo.svg" alt="logo" width="180" height="100"></a></div>
-                    <h2 class="auth-heading text-center mb-5">Bienvenido</h2>
+                    <h2 class="auth-heading text-center mb-5">Bienvenido al Login</h2>
+                    <h2 class="auth-heading text-center mb-5">Inicio Sesion</h2>
                     <div class="auth-form-container text-start">
                         <form class="user auth-form login-form" action="@Url.Action("Index","Login")" method="post">
                             <div class="email mb-3">
