--- a/ProyectoHotel/Views/Inicio/Usuario.cshtml
+++ b/ProyectoHotel/Views/Inicio/Usuario.cshtml
@@ -294,8 +294,8 @@
                     IdPersona: $("#txtid").val(),
                     TipoDocumento: $("#cbotipodocumento").val(),
                     Documento: $("#txtdocumento").val(),
-                    Nombre: $("#txtnombre").val(),
-                    Apellido: $("#txtapellido").val(),
+                    Nombre: $("#txtnombre").val().substr(0, 1).toUpperCase() + $("#txtnombre").val().substr(1),
+                    Apellido: $("#txtapellido").val().substr(0, 1).toUpperCase() + $("#txtapellido").val().substr(1),
                     Correo: $("#txtcorreo").val(),
                     Clave: $("#txtclave").val(),
                     oTipoPersona: { IdTipoPersona : $("#cbotipo option:selected").val() },
