--- a/ProyectoHotel/Views/Mantenimiento/Habitaciones.cshtml
+++ b/ProyectoHotel/Views/Mantenimiento/Habitaciones.cshtml
@@ -71,21 +71,21 @@
                     <div class="form-group row">
                         <label for="txtnombre" class="col-sm-2 col-form-label col-form-label-sm">Numero</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control form-control-sm model" maxlength="100" id="txtnumero" name="numero" autocomplete="off">
+                            <input type="text" class="form-control form-control-sm model required" maxlength="100" id="txtnumero" name="numero" autocomplete="off">
                         </div>
                         <span class="error"></span>
                     </div>
                     <div class="form-group row">
                         <label for="txtdetalle" class="col-sm-2 col-form-label col-form-label-sm">Detalle</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control form-control-sm model" maxlength="100" id="txtdetalle" name="detalle" autocomplete="off">
+                            <input type="text" class="form-control form-control-sm model required" maxlength="100" id="txtdetalle" name="detalle" autocomplete="off">
                         </div>
                         <span class="error"></span>
                     </div>
                     <div class="form-group row">
                         <label for="txtprecio" class="col-sm-2 col-form-label col-form-label-sm">Precio (S/.)</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control form-control-sm model" maxlength="4" id="txtprecio" name="precio" autocomplete="off">
+                            <input type="text" class="form-control form-control-sm model required" maxlength="4" id="txtprecio" name="precio" autocomplete="off">
                         </div>
                         <span class="error"></span>
                     </div>
@@ -285,10 +285,10 @@
                 objeto: {
                     IdHabitacion: parseInt($("#txtid").val()),
                     Numero: $("#txtnumero").val(),
-                    Detalle: $("#txtdetalle").val().toLowerCase(),
+                    Detalle: $("#txtdetalle").val().substr(0, 1).toUpperCase() + $("#txtdetalle").val().substr(1),
                     PrecioTexto: $("#txtprecio").val(),
-                    oCategoria: { IdCategoria: $("#cbocategoria option:selected").val()} ,
-                    oPiso: { IdPiso: $("#cbopiso option:selected").val() },
+                    Categoria: $("#cbocategoria").val() ,
+                    Piso: $("#cbopiso").val(),
                     Estado: parseInt($("#cboEstado").val()) == 1 ? true : false
                 }
             }
