--- a/ProyectoHotel/Views/Tienda/Producto.cshtml
+++ b/ProyectoHotel/Views/Tienda/Producto.cshtml
@@ -223,8 +223,8 @@ function Guardar() {
     var request = {
         objeto: {
             IdProducto: parseInt($("#txtid").val()),
-            Nombre: $("#txtnombre").val().toLowerCase(),
-            Detalle: $("#txtdetalle").val().toLowerCase(),
+            Nombre: $("#txtnombre").val().substr(0, 1).toUpperCase() + $("#txtnombre").val().substr(1),
+            Detalle: $("#txtdetalle").val().substr(0, 1).toUpperCase() + $("#txtdetalle").val().substring(1),
             PrecioTexto: $("#txtprecio").val(),
             Cantidad: $("#txtcantidad").val(),
             Estado: parseInt($("#cboEstado").val()) == 1 ? true : false
